# hazelcast-cpp-client

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml  codestyle.yml  conan-test.yml  nightly-linux.yml  nightly-macos.yml  nightly-ubuntu-i386.yml  nightly-ubuntu-x64.yml  nightly-ubuntu-x86.yml  nightly-ubuntu-x86_64.yml  nightly-windows.yml  nightly.yml  win-vcpkg-test.yml
examples/Org.Website.Samples/: CustomSerializerSample.cpp  EntryProcessorSample.cpp  ExecutorSample.cpp  GlobalSerializerSample.cpp  IdentifiedDataSerializableSample.cpp  ListSample.cpp  MapSample.cpp  MultiMapSample.cpp  PortableSerializableSample.cpp  QuerySample.cpp  QueueSample.cpp  ReplicatedMapSample.cpp  RingBufferSample.cpp  SetSample.cpp  TopicSample.cpp
examples/authentication/: token_authentication.cpp  username_password_authentication.cpp
examples/aws/: AwsClientWithKey.cpp  AwsClientWithNoKeyNoIAMRoleInsideAws.cpp  AwsClientWithNoKeyWithIAMRoleInsideAws.cpp
examples/backpressure/: EnableBackPressure.cpp
examples/client-statistics/: ClientStatistics.cpp
examples/cp/: atomic_long.cpp  atomic_reference.cpp  counting_semphore.cpp  fenced_lock.cpp  latch.cpp
examples/event-properties/: SetEventThreadCountAndMaxQueueSize.cpp
examples/pipeline/: PipeliningDemo.cpp
hazelcast/test/src/: CMakeLists.txt  ClientTestSupport.h  ClientTestSupportBase.h  HazelcastServer.h  HazelcastServerFactory.h  HazelcastTests1.cpp  HazelcastTests2.cpp  HazelcastTests3.cpp  HazelcastTests5.cpp  HazelcastTests7.cpp  HazelcastTests8.cpp  IdentifiedSerializables.h  TestHelperFunctions.h  cp_test.cpp  logger_test.cpp  main.cpp
hazelcast/test/src/cpp-controller/: RemoteController.cpp  RemoteController.h  remote_controller_types.cpp  remote_controller_types.h
hazelcast/test/src/executor/tasks/: Tasks.h
hazelcast/test/src/ringbuffer/: StartsWithStringFilter.h
hazelcast/test/src/serialization/: Serializables.cpp  Serializables.h
scripts/: build-unix.sh  do-all-unix.sh  install-boost.sh  install-thrift.sh  start-rc.bat  start-rc.sh  test-windows.bat  verify-installation-unix.sh
(+355 files in other folders)
